--- a/gemini_audio.ipynb
+++ b/gemini_audio.ipynb
@@ -2,6 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Of course, here is a breakdown of the speakers in the audio clip.\n",
+      "\n",
+      "### Speaker Identification\n",
+      "\n",
+      "1.  **Gita** - **Female, Expressive and Questioning Tone:**\n",
+      "    Gita speaks with a clear, mid-to-high-pitched voice. Her tone is expressive and inquisitive, speaking at a moderate pace. The recording is high-quality with a close, intimate sound.\n",
+      "\n",
+      "2.  **Gopal** - **Male, Calm and Measured Tone:**\n",
+      "    Gopal has a calm, mid-pitched male voice. He speaks in a measured and slightly charming tone at a moderate pace. The audio is captured clearly in a high-quality, close-sounding environment.\n",
+      "\n",
+      "3.  **Rohan** - **Male Narrator, Upbeat and Rhythmic:**\n",
+      "    Rohan speaks in a classic, upbeat narrator's voice with a mid-to-low pitch. His delivery is fast and rhythmic, designed to be memorable for the advertisement's tagline. The recording quality is excellent.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google import genai\n",
+    "import os\n",
+    "\n",
+    "client =  genai.Client(api_key=os.getenv(\"GOOGLE_API_KEY\"))\n",
+    "\n",
+    "myfile = client.files.upload(file='/home/skamalj/dev/tataplay/separated_audio/htdemucs/media_1_audio/vocals.wav')\n",
+    "\n",
+    "response = client.models.generate_content(\n",
+    "  model='gemini-2.5-pro',\n",
+    "  contents=[\n",
+    "    \"\"\"You are given an audio clip. \n",
+    "    Task:\n",
+    "    1. Identify the speakers.\n",
+    "    2. Give them indian names basis gender\n",
+    "    3. Descrive their speaking style\n",
+    "\n",
+    "    Stye description examples:\n",
+    "    Aditi - Slightly High-Pitched, Expressive Tone:\n",
+    "    \"Aditi speaks with a slightly higher pitch in a close-sounding environment. Her voice is clear, with subtle emotional depth and a normal pace, all captured in high-quality recording.\"\n",
+    "\n",
+    "    Sita - Rapid, Slightly Monotone:\n",
+    "    \"Sita speaks at a fast pace with a slightly low-pitched voice, captured clearly in a close-sounding environment with excellent recording quality.\"\n",
+    "\n",
+    "    Tapan - Male, Moderate Pace, Slightly Monotone:\n",
+    "    \"Tapan speaks at a moderate pace with a slightly monotone tone. The recording is clear, with a close sound and only minimal ambient noise.\"\n",
+    "    \"\"\",\n",
+    "    myfile,\n",
+    "  ]\n",
+    ")\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
